--- a/index.html
+++ b/index.html
@@ -17,7 +17,15 @@
                 </figure>
                 <h1 class="titolo">Campo Minato</h1>
             </div>
-            <button id="play-button">Play</button>
+            <div class="mode-button">
+                <label for="game-mode">Difficulty:</label>
+                <select name="game-mode" id="game-mode">
+                    <option value="easy">Easy</option>
+                    <option value="medium">Medium</option>
+                    <option value="hard">Hard</option>
+                </select>
+                <button id="play-button">Play</button>
+            </div>
         </header>
     
         <main>
